tests/fixtures/invalid/lat_too_high.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <wpt lat="90.1" lon="13.4050">
    <name>Latitude too high</name>
  </wpt>
</gpx>
